semantics/tests/parser/invalid/parse_invalid_octal_integer_with_trailing_underscore.bpl
let octal = 0o32_45_